--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^11.6.5
   firebase_storage_web: ^3.6.6
   google_sign_in: ^6.1.4
+  introduction_screen: ^3.1.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -44,6 +45,7 @@ dependencies:
   shared_preferences_web: ^2.2.0
   uuid: ^4.5.1
   table_calendar: ^3.2.0
+
 
 
 dev_dependencies:
@@ -71,6 +73,9 @@ flutter:
     - assets/logo.png
     - assets/bg_login.png
     - assets/logo_final.png
+    - assets/onboarding_0.png
+    - assets/onboarding_1.png
+    - assets/onboarding_2.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
